poke/testsuite/poke.pkl/arrays-index-diag-2.pk
/* { dg-do compile } */

defvar a = [1,2,3][4]; /* { dg-error "" } */
